[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Killer Artists"

[node name="Host" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
text = "Join"

[node name="NameField" type="LineEdit" parent="."]
margin_right = 58.0
margin_bottom = 24.0
text = "Jeff"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeField" type="LineEdit" parent="."]
margin_right = 58.0
margin_bottom = 24.0
[connection signal="pressed" from="Host" to="." method="_on_host"]
[connection signal="pressed" from="Join" to="." method="_on_join"]
